command line, improved blender cameras

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include(deps/imgui.cmake)
 include(deps/raylib.cmake)
 include(deps/raygui.cmake)
 include(deps/ryml.cmake)
+include(deps/cli11.cmake)
 
 
 
@@ -21,7 +22,7 @@ add_executable(boxey src/main.cpp)
 # Include raygui directory
 target_include_directories(boxey SYSTEM PRIVATE "${FETCHCONTENT_BASE_DIR}/raygui-src/src")
 
-target_link_libraries(boxey PUBLIC  raylib ryml::ryml)
+target_link_libraries(boxey PUBLIC  raylib ryml::ryml CLI11::CLI11)
 
 
 if (MSVC)
