--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Create Artifacts
         run: |
           mkdir release
-          copy build\Release\rlgui.exe release\rlgui.exe
+          copy build\Release\boxey.exe release\boxey.exe
           
       # copy build\Release\gui.exe release\gui.exe
       # copy build\Release\igui.exe release\igui.exe
@@ -59,5 +59,5 @@ jobs:
           # if shared library
           # artifacts: "release/gui.exe, release/igui.exe, release/SDL2.dll"
           #artifacts: "release/gui.exe, release/igui.exe"
-          artifacts: "release/rlgui.exe"
+          artifacts: "release/boxey.exe"
           token: ${{ secrets.GITHUB_TOKEN }}
